--- a/index.html
+++ b/index.html
@@ -18,22 +18,98 @@
         <div class="animate bounceIn">
             <ul class="main-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact-form">From</a></li>
             </ul>
-        </div>
-    
+        </div> 
+        <div class="animate bounceIn">
         <div class="profile">
-            <img src="img/Profile Pic.jpg">
-            <div class="profile-text">
-                    <h2>Tanvir Mohammad Rizvy</h2>
-                    <h3>Dhaka,BanglaDesh</h3>
-                    <p>Web Developer</p>
+                <img src="img/Profile Pic.jpg">
+                <div class="profile-text">
+                        <h2>Tanvir Mohammad Rizvy</h2>
+                        <h3>Dhaka,BanglaDesh</h3>
+                        <p>Web Developer</p>
+                </div>
             </div>
-        </div>        
+        </div>              
     </header>
+    <!-- Sections -->
+    <div class="animate bounceIn">
+    <section id="about" class="sections1">
 
+
+                            <div class="about-content text-left">
+                                <h4>Hi, i’m Tanvir Mohammad Rizvy, from Bangladesh.</h4>
+                                <p>I have near 5 years working experience in the field of programming. As a student of Computer Science & Engineering I am practicing this field with my core interest.</p>
+
+                                <p>I am expertise in Website Development using HTML5, CSS3, Wordpress,Wordpress Ecommerce, PHP, My SQL, Jquery, Facebook apis, twitter apis, Google apis. I am also expert in Responsive website design and development using twitter bootstrap and css3. I have great skill in design and development.</p>
+                                    
+                                <p>Also I am an Android/Ios Application Developer and developing android and ios Application templates also I post regular programming tutorial in my youtube channel. I always try to give my best skills and efforts to all of my works.Thank U.</p>
+                                <a href="https://www.facebook.com/tanvir.m.rizvy" target="_blank" class="btn btn-default">Hire Me !</a>
+                            </div> 
+        </section>
+    </div>
+
+    <div class="animate bounceIn">
+        <section id="contact" class="sections2">
+        <div class="contact-details-area">
+
+                <div class="contact-details">
+                    <h4>Address</h4>
+                    <p>TEJGAON, TEJGAON-1215, DHAKA, BANGLADESH.</p>
+                </div>
+
+                <div class="contact-details">
+                    <h4>Phone</h4>
+                    <p>+880 1689585531</p>
+                    <p>+880 1955394221</p>
+                </div>
+
+                <div class="contact-details">
+                    <h4>Web</h4>
+                    <p>Mail: tanvirmohammad2@gmail.com</p>
+                    <p>Website: https://www.ratekom.com</p>
+                    <p>Website: http://modernculture.org</p>
+                    <p>Website: http://minciter.com</p>
+                </div>
+
+            </div>
+        </section>
+        </div>
+
+
+        <div class="animate bounceIn">
+        <section id="contact-form" class="sections3">
+        <div class="form">
+
+                <h4>Leave a message</h4>
+                <form>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Name*">
+                    </div>
+
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Email*">
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Subject*">
+                    </div>
+
+                    <div class="form-group">
+                        <textarea rows="9" class="form-control" placeholder="Message"></textarea>
+                    </div>
+
+
+                    <a type="submit" class="btn btn-default">Hire Me !</a>
+
+                </form>
+
+            </div>
+        </section>
+        </div>
    
 </body>
 </html>
